# jc_reborn

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.cdtest.txt  CMakeLists.ps1.txt  CMakeLists.txt  Dockerfile  Dockerfile.ps1  Makefile.32bit  Makefile.analyzer  Makefile.emscripten  Makefile.kallistios  Makefile.linux  Makefile.linux.32  Makefile.retrofw  Makefile.xbox  PS1_DEBUG_SNIPPETS.md  PS1_DEVELOPMENT_GUIDE.md  PS1_PORT_STATUS.md  PS1_TESTING_GUIDE.md  PS1_TESTING_SESSION_4.md  PS1_TILE_RENDERING_DEBUG.md  PS1_TOOLCHAIN_STATUS.md  README.md  SYSTEM.CNF  SYSTEM_ULTRA.CNF  TITLE.RAW  ads.c  ads.h  analyze-build.sh  analyze_resources.c  auto-test-ps1.sh  bench.c  build-docker-image.sh  build-ps1.sh  cd_layout.xml  cd_layout_minimal.xml  cdrom_ps1.c  cdrom_ps1.h  check-ps1-status.sh  (+71 more)
Inkplate_SD_Pictures/: Inkplate_SD_Pictures.ino
build-cdtest/: CMakeCache.txt
build-minimal/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json  ps1_minimal.elf  ps1_minimal.map  ps1_minimal_main.c
build-ps1/: CMakeCache.txt  cmake_install.cmake  compile_commands.json  jcreborn.elf  jcreborn.map
build-ultra/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json  ps1_ultra.elf  ps1_ultra.map
captions/: day.txt  fadeout.txt  halloween.txt  newyears.txt  stpatrick.txt
docs/: CLEANUP_SUMMARY.md  PS1_DEBUGGING.md  PS1_LEFT_DEBUG_PANEL.md  PS1_ROOT_CAUSE_EXEC_PLAN.md  README.md  resuming-1-10-2026.md  screenshot_decode_2026-03-10.csv
host-script-review/: capture-regression-report.json  capture-regression-review.html  expectation-report.html  expectation-report.json  expectations.json  frame-image-regression-baseline.json  frame-meta-regression-baseline.json  frame-meta-regression-report.json  host-truth-compare.html  host-truth-compare.json  (+13 more)
(+1263 files in other folders)
